--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1345,7 +1345,7 @@ a.text-info:hover {
   color: #245269;
 }
 .text-warning {
-  color: #8a6d3b;
+  color: #ec971f;
 }
 a.text-warning:hover {
   color: #66512c;
@@ -2816,10 +2816,10 @@ select[multiple].form-group-lg .form-control {
 .has-warning.checkbox label,
 .has-warning.radio-inline label,
 .has-warning.checkbox-inline label {
-  color: #8a6d3b;
+  color: #ec971f;
 }
 .has-warning .form-control {
-  border-color: #8a6d3b;
+  border-color: #ec971f;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
@@ -2829,12 +2829,12 @@ select[multiple].form-group-lg .form-control {
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #c0a16b;
 }
 .has-warning .input-group-addon {
-  color: #8a6d3b;
+  color: #ec971f;
   background-color: #fcf8e3;
-  border-color: #8a6d3b;
+  border-color: #ec971f;
 }
 .has-warning .form-control-feedback {
-  color: #8a6d3b;
+  color: #ec971f;
 }
 .has-error .help-block,
 .has-error .control-label,
@@ -4956,7 +4956,7 @@ a.thumbnail.active {
   color: #245269;
 }
 .alert-warning {
-  color: #8a6d3b;
+  color: #ec971f;
   background-color: #fcf8e3;
   border-color: #faebcc;
 }
@@ -5235,26 +5235,26 @@ a.list-group-item-info.active:focus {
   border-color: #31708f;
 }
 .list-group-item-warning {
-  color: #8a6d3b;
+  color: #ec971f;
   background-color: #fcf8e3;
 }
 a.list-group-item-warning {
-  color: #8a6d3b;
+  color: #ec971f;
 }
 a.list-group-item-warning .list-group-item-heading {
   color: inherit;
 }
 a.list-group-item-warning:hover,
 a.list-group-item-warning:focus {
-  color: #8a6d3b;
+  color: #ec971f;
   background-color: #faf2cc;
 }
 a.list-group-item-warning.active,
 a.list-group-item-warning.active:hover,
 a.list-group-item-warning.active:focus {
   color: #fff;
-  background-color: #8a6d3b;
-  border-color: #8a6d3b;
+  background-color: #ec971f;
+  border-color: #ec971f;
 }
 .list-group-item-danger {
   color: #a94442;
@@ -5593,7 +5593,7 @@ a.list-group-item-danger.active:focus {
   border-color: #faebcc;
 }
 .panel-warning > .panel-heading {
-  color: #8a6d3b;
+  color: #ec971f;
   background-color: #fcf8e3;
   border-color: #faebcc;
 }
@@ -5602,7 +5602,7 @@ a.list-group-item-danger.active:focus {
 }
 .panel-warning > .panel-heading .badge {
   color: #fcf8e3;
-  background-color: #8a6d3b;
+  background-color: #ec971f;
 }
 .panel-warning > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #faebcc;
